--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
 
   <!-- Header with Navbar -->
   <header>
-    <nav class="navbar">
-      <div class="logo">
-        <i class="ri-book-3-fill"></i> BookFinder
-      </div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#books">Books</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+   <nav class="navbar">
+  <div class="logo">
+    <i class="ri-book-3-fill"></i> BookFinder
+  </div>
+
+  <!-- Hamburger menu icon -->
+  <div class="menu-toggle" id="menuToggle">
+    <i class="ri-menu-line"></i>
+  </div>
+
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#books">Books</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
     <!-- Book Slider -->
     <div class="slider" id="slider" id="home">
